# AGR-MVS

./: .gitignore  Dockerfile  README.md  iv.yaml  pyproject.toml
.github/workflows/: docker.yml
agr_mvs/: Ticket.py  Turno.py  empresa.py  ticket.py  tienda.py  turno.py
agr_mvs/enums/: enum_turno.py
doc/: Conf-Github.md  User-Journeys.md
docs/: Biblioteca-Aserciones.md  Docker.md  Gestor-Dependencias.md  Gestor-Tareas.md  Milestones.md  Test-Runner.md  estructura-docker.md
src/: Ticket.py  Turno.py  empleado.py  empresa.py  tienda.py  usuario.py
src/enums/: enum_turno.py
tests/: test-agr-mvs.py  test-syntax.py  test_agr_mvs.py  test_variables.py
